Let jscad scripts import Walnut
Walnut has an alternative implementation of intersect, union, and subtract. On
small objects, the Walnut operations are about as fast as the JSCAD built in
operations. For large objects, Walnut is faster. The main benefit to Walnut is
that it internally uses exact arithmetic.

--- a/packages/modeling/package.json
+++ b/packages/modeling/package.json
@@ -61,5 +61,8 @@
     "nyc": "15.1.0",
     "uglifyify": "5.0.2"
   },
-  "gitHead": "a90b9bad95a417661c619dc733e62c587dc71a4a"
+  "gitHead": "a90b9bad95a417661c619dc733e62c587dc71a4a",
+  "dependencies": {
+    "@bluelightning32/walnut": "^1.0.3"
+  }
 }
